--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Roboto-Medium.ttf">
+            <string>Roboto-Medium</string>
+            <string>Roboto-Medium</string>
+            <string>Roboto-Medium</string>
+        </mutableArray>
+        <mutableArray key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+            <string>Roboto-Regular</string>
+            <string>Roboto-Regular</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" userLabel="Login View Controller" customClass="LoginViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +28,109 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="Udacity" translatesAutoresizingMaskIntoConstraints="NO" id="KQw-h7-sWE">
+                                <rect key="frame" x="172" y="20" width="256" height="189"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login to Udacity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBV-Zq-lkJ">
+                                <rect key="frame" x="212" y="217" width="177" height="29"/>
+                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VVv-6m-TxP">
+                                <rect key="frame" x="16" y="281" width="568" height="40"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="DAm-63-X4I"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="24"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XdH-R9-cNu">
+                                <rect key="frame" x="16" y="329" width="568" height="40"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="wnA-h6-YJT"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Box" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDS-4G-eX8">
+                                <rect key="frame" x="16" y="254" width="568" height="19"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="highlightedColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <variation key="heightClass=compact" misplaced="YES">
+                                    <rect key="frame" x="16" y="329" width="568" height="22"/>
+                                </variation>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rn9-vb-9sA">
+                                <rect key="frame" x="16" y="377" width="568" height="41"/>
+                                <color key="backgroundColor" red="1" green="0.32725644390000003" blue="0.0029767620199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="24"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="doLogin:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="j3s-iJ-U2J"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rZb-4p-oVL">
+                                <rect key="frame" x="16" y="437" width="568" height="36"/>
+                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
+                                <state key="normal" title="Don't have an account? Sign Up">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.074509803920000006" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="0.89000000000000001" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="rZb-4p-oVL" firstAttribute="top" secondItem="rn9-vb-9sA" secondAttribute="bottom" constant="19" id="2Df-Gc-w1l"/>
+                            <constraint firstItem="rn9-vb-9sA" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="5eH-Xy-5JW"/>
+                            <constraint firstItem="VVv-6m-TxP" firstAttribute="top" secondItem="YDS-4G-eX8" secondAttribute="bottom" constant="8" id="8n5-Cc-Bvp"/>
+                            <constraint firstItem="rn9-vb-9sA" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ADb-hg-0Ar"/>
+                            <constraint firstItem="VVv-6m-TxP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="DKn-Q9-yqR"/>
+                            <constraint firstAttribute="centerY" secondItem="KQw-h7-sWE" secondAttribute="centerY" constant="185.5" id="ECN-oZ-i6s"/>
+                            <constraint firstItem="KBV-Zq-lkJ" firstAttribute="top" secondItem="KQw-h7-sWE" secondAttribute="bottom" constant="8" id="FV3-8E-A22"/>
+                            <constraint firstItem="KQw-h7-sWE" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="ICg-tD-mK6"/>
+                            <constraint firstItem="XdH-R9-cNu" firstAttribute="top" secondItem="VVv-6m-TxP" secondAttribute="bottom" constant="8" id="J81-WJ-A55"/>
+                            <constraint firstItem="rZb-4p-oVL" firstAttribute="top" secondItem="rn9-vb-9sA" secondAttribute="bottom" constant="19" id="JoS-sh-l2B"/>
+                            <constraint firstItem="YDS-4G-eX8" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="M1R-iA-iFg"/>
+                            <constraint firstItem="rZb-4p-oVL" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="PeA-1d-Cjq"/>
+                            <constraint firstAttribute="centerX" secondItem="rZb-4p-oVL" secondAttribute="centerX" id="QHL-UN-Ezg"/>
+                            <constraint firstItem="XdH-R9-cNu" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="RGY-fc-wq3"/>
+                            <constraint firstAttribute="centerX" secondItem="KBV-Zq-lkJ" secondAttribute="centerX" id="S74-0a-CV1"/>
+                            <constraint firstAttribute="centerX" secondItem="YDS-4G-eX8" secondAttribute="centerX" id="frM-Vc-1NM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rZb-4p-oVL" secondAttribute="trailing" id="g4l-Ov-FB7"/>
+                            <constraint firstItem="XdH-R9-cNu" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="hwg-CU-y5g"/>
+                            <constraint firstAttribute="centerX" secondItem="KQw-h7-sWE" secondAttribute="centerX" id="jeo-Ev-ER8"/>
+                            <constraint firstItem="rZb-4p-oVL" firstAttribute="top" secondItem="rn9-vb-9sA" secondAttribute="bottom" constant="19" id="jkT-ee-bdb"/>
+                            <constraint firstItem="YDS-4G-eX8" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ldf-A7-5ph"/>
+                            <constraint firstAttribute="centerY" secondItem="KQw-h7-sWE" secondAttribute="centerY" constant="185.5" id="mI6-vL-QBa"/>
+                            <constraint firstItem="rn9-vb-9sA" firstAttribute="top" secondItem="XdH-R9-cNu" secondAttribute="bottom" constant="8" symbolic="YES" id="tGD-eq-sE5"/>
+                            <constraint firstItem="VVv-6m-TxP" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="vAT-z9-asc"/>
+                            <constraint firstItem="YDS-4G-eX8" firstAttribute="top" secondItem="KBV-Zq-lkJ" secondAttribute="bottom" constant="8" id="wK3-l9-PsJ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="doRegisterForUdacityAccount" destination="rZb-4p-oVL" id="Trb-1p-tCU"/>
+                        <outlet property="errorTextField" destination="YDS-4G-eX8" id="eSp-6t-NSi"/>
+                        <outlet property="passwordTextField" destination="XdH-R9-cNu" id="dbo-Gn-8Ho"/>
+                        <outlet property="usernameTextField" destination="VVv-6m-TxP" id="ckJ-nP-oXJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="Udacity" width="256" height="256"/>
+    </resources>
 </document>
